@@ -1,6 +1,12 @@
+2003-09-30  Wakaba  <wakaba@suika.fam.cx>
+
+	* XPath.pm (_get_ns_decls_node): Renamed from __get_ns_decls_node.
+	(qname): New option 'use_context_function_library'.
+
 2003-09-28  Wakaba  <wakaba@suika.fam.cx>
 
 	* QName.pm (generate_prefix): New function.
+	(__check_prefix): New option 'check_prefix_xml_'.
 
 2003-09-27  Wakaba  <wakaba@suika.fam.cx>
 
