@@ -1,3 +1,7 @@
+2003-09-30  Wakaba  <wakaba@suika.fam.cx>
+
+	* XML.pm (__set_parent_node): New.
+
 2003-09-07  Wakaba  <wakaba@suika.fam.cx>
 
 	* XML.pm: Change SuikaWiki:: -> Message::.
